objects/InvoicingMethod__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Invoicing method by chanel</description>
    <fields>
        <fullName>DeliveryMethod__c</fullName>
        <label>DeliveryMethod</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoicingMethodCode__c</fullName>
        <description>Código de método de facturación</description>
        <label>InvoicingMethodCode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvoicingType__c</fullName>
        <label>InvoicingType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PointOfSaleType__c</fullName>
        <description>Tipo de punto de venta donde se factura la orden</description>
        <label>PointOfSaleType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>InvoicingMethod</label>
</CustomObject>